fix: overlapping

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,8 +1,6 @@
 .footer {
   background-color: $gray;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+
   &__wrapper {
     max-width: 1200px;
     margin-left: auto;
